--- a/src/index.css
+++ b/src/index.css
@@ -118,3 +118,7 @@
 @utility shadow-all-xl {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
 }
+
+@utility primary-gradient {
+  background: linear-gradient(90deg, #11998e, #38ef7d);
+}
